# bambutler

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test_data/: aligned_MD_sorted.bam  aligned_MD_sorted.bam.bai  run_alignment.sh  test_input_notags.bam  unaligned.bam
tests/: integration_test.rs
tests/common/: mod.rs
