[package]
name = "bamButler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.44"
rustc-hash = "1.1"
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rayon = "1.7"

[dev-dependencies]
tempfile = "3.8"